--- a/index.html
+++ b/index.html
@@ -84,8 +84,21 @@
         <div class="container-projetos">
             <div class="projeto ativo">
                 <a href="#">
-                    <img src="./src/imagens/projeto-gta.png" alt="Projeto Landing page GTA">
-                    <h3>Projeto GTA</h3>
+                    <img src="https://via.placeholder.com/515X700" alt="Capa do Projeto">
+                    <h3>Projeto</h3>
+                    
+                    <div class="informacoes-projeto">
+                        <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                        <p>🔗 Ver no GitHub Pages</p>
+                    </div>
+
+                </a>
+            </div>
+
+            <div class="projeto ativo">
+                <a href="#">
+                    <img src="https://via.placeholder.com/515X700" alt="Capa do Projeto">
+                    <h3>Projeto</h3>
 
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -97,8 +110,8 @@
 
             <div class="projeto ativo">
                 <a href="#">
-                    <img src="./src/imagens/projeto-listagem-pokemon.png" alt="Projeto Landing page Pokemon">
-                    <h3>Projeto Pokemon</h3>
+                    <img src="https://via.placeholder.com/515X700" alt="Capa do Projeto">
+                    <h3>Projeto</h3>
 
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -110,21 +123,8 @@
 
             <div class="projeto ativo">
                 <a href="#">
-                    <img src="./src/imagens/projeto-one-piece.png" alt="Projeto Landing page One Piece">
-                    <h3>Projeto One Piece</h3>
-
-                    <div class="informacoes-projeto">
-                        <p>Projeto feito usando HTML, CSS e JavaScript</p>
-                        <p>🔗 Ver no GitHub Pages</p>
-                    </div>
-
-                </a>
-            </div>
-
-            <div class="projeto ativo">
-                <a href="#">
-                    <img src="./src/imagens/projeto-x-men.png" alt="Projeto Landing page X-Men">
-                    <h3>Projeto X-Men</h3>
+                    <img src="https://via.placeholder.com/515X700" alt="Capa do Projeto">
+                    <h3>Projeto</h3>
 
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -136,8 +136,8 @@
 
             <div class="projeto">
                 <a href="#">
-                    <img src="./src/imagens/projeto-gta.png" alt="Projeto Landing page GTA">
-                    <h3>Projeto GTA</h3>
+                    <img src="https://via.placeholder.com/515X700" alt="Capa do Projeto">
+                    <h3>Projeto</h3>
 
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -149,8 +149,8 @@
 
             <div class="projeto">
                 <a href="#">
-                    <img src="./src/imagens/projeto-listagem-pokemon.png" alt="Projeto Landing page Pokemon">
-                    <h3>Projeto Pokemon</h3>
+                    <img src="https://via.placeholder.com/515X700" alt="Capa do Projeto">
+                    <h3>Projeto</h3>
 
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -162,8 +162,8 @@
 
             <div class="projeto">
                 <a href="#">
-                    <img src="./src/imagens/projeto-one-piece.png" alt="Projeto Landing page One Piece">
-                    <h3>Projeto One Piece</h3>
+                    <img src="https://via.placeholder.com/515X700" alt="Capa do Projeto">
+                    <h3>Projeto</h3>
 
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -175,8 +175,8 @@
 
             <div class="projeto">
                 <a href="#">
-                    <img src="./src/imagens/projeto-x-men.png" alt="Projeto Landing page X-Men">
-                    <h3>Projeto X-Men</h3>
+                    <img src="https://via.placeholder.com/515X700" alt="Capa do Projeto">
+                    <h3>Projeto</h3>
 
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
